scalable_dir = 'hicolor' / 'scalable' / 'apps'
install_data(
  scalable_dir / f'@application_id@.svg',
  install_dir: nonemast_datadir / 'icons' / scalable_dir,
)

symbolic_dir = 'hicolor' / 'symbolic' / 'apps'
install_data(
  symbolic_dir / f'@application_id@-symbolic.svg',
  install_dir: nonemast_datadir / 'icons' / symbolic_dir,
)
